--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,9 +25,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
-            android:name="mx.com.factico.cide.MainActivity"
-            android:label="@string/app_name" >
+            android:name="mx.com.factico.cide.AddTestimonioActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation"
+            android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,14 +39,20 @@
             </intent-filter>
         </activity>
         
+        <activity
+            android:name="mx.com.factico.cide.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
         <!-- Parse Framework -->
         <service android:name="com.parse.PushService" />
-		<receiver android:name="com.parse.ParseBroadcastReceiver">
+		<!-- <receiver android:name="com.parse.ParseBroadcastReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 				<action android:name="android.intent.action.USER_PRESENT" />
 			</intent-filter>
 		</receiver>
+		 -->
 		
 		<receiver
 		    android:name="mx.com.factico.cide.CustomNotificationReceiver"
