--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -27,6 +27,19 @@
         android:theme="@style/AppTheme" >
         
         <activity
+            android:name="mx.com.factico.cide.dialogues.CitiesDialog"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation"
+            android:windowSoftInputMode="stateHidden" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
             android:name="mx.com.factico.cide.AddTestimonioActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -42,6 +55,21 @@
         <activity
             android:name="mx.com.factico.cide.MainActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name="mx.com.factico.cide.PropuestaActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         
         <!-- Parse Framework -->
