--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -27,24 +27,10 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="mx.com.factico.cide.dialogues.CitiesDialog"
-            android:label="@string/app_name"
+            android:name="mx.com.factico.cide.SplashActivity"
             android:screenOrientation="portrait"
-            android:configChanges="orientation"
-            android:windowSoftInputMode="stateHidden" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        
-        <activity
-            android:name="mx.com.factico.cide.AddTestimonioActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation"
-            android:windowSoftInputMode="stateHidden" >
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,23 +40,56 @@
         
         <activity
             android:name="mx.com.factico.cide.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
         
         <activity
-            android:name="mx.com.factico.cide.PropuestaActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name="mx.com.factico.cide.AboutActivity"
+            android:label="@string/about_name"
+            android:screenOrientation="portrait"
+            android:parentActivityName="mx.com.factico.cide.MainActivity" />
+        
+        <activity
+            android:name="mx.com.factico.cide.TestimoniosMenuActivity"
+            android:label="@string/testimonio_name"
+            android:screenOrientation="portrait"
+            android:parentActivityName="mx.com.factico.cide.MainActivity" />
+        
+        <activity
+            android:name="mx.com.factico.cide.TestimoniosActivity"
+            android:label="@string/testimonio_name"
+            android:screenOrientation="portrait"
+            android:parentActivityName="mx.com.factico.cide.TestimoniosMenuActivity" />
+        
+        <activity
+            android:name="mx.com.factico.cide.PropuestasActivity"
+            android:label="@string/propuesta_name"
+            android:screenOrientation="portrait"
+            android:parentActivityName="mx.com.factico.cide.MainActivity" />
+        
+        <activity
+            android:name="mx.com.factico.cide.dialogues.CitiesDialog"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation"
+            android:windowSoftInputMode="stateHidden" />
+        
+        <activity
+            android:name="mx.com.factico.cide.TestimoniosAddActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation"
+            android:windowSoftInputMode="stateHidden" />
+        
+        <activity
+            android:name="mx.com.factico.cide.GcmRegisterActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name" />
+        
+        <activity
+            android:name="mx.com.factico.cide.PropuestasAddActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name" />
         
         <!-- Parse Framework -->
         <service android:name="com.parse.PushService" />
@@ -83,7 +102,7 @@
 		 -->
 		
 		<receiver
-		    android:name="mx.com.factico.cide.CustomNotificationReceiver"
+		    android:name="mx.com.factico.cide.receivers.CustomNotificationReceiver"
 		    android:exported="false" >
 		    <intent-filter>
 		        <action android:name="mx.com.factico.cide.CUSTOM_NOTIFICATION" />
