--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -28,9 +28,7 @@
         
         <activity
             android:name="mx.com.factico.cide.SplashActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,52 +43,52 @@
         
         <activity
             android:name="mx.com.factico.cide.AboutActivity"
-            android:label="@string/about_name"
             android:screenOrientation="portrait"
             android:parentActivityName="mx.com.factico.cide.MainActivity" />
         
         <activity
+            android:name="mx.com.factico.cide.SettingsActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
             android:name="mx.com.factico.cide.TestimoniosMenuActivity"
-            android:label="@string/testimonio_name"
             android:screenOrientation="portrait"
             android:parentActivityName="mx.com.factico.cide.MainActivity" />
         
         <activity
             android:name="mx.com.factico.cide.TestimoniosActivity"
-            android:label="@string/testimonio_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName="mx.com.factico.cide.TestimoniosMenuActivity" />
+        
+        <activity
+            android:name="mx.com.factico.cide.MexicoMapActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName="mx.com.factico.cide.TestimoniosMenuActivity" />
         
         <activity
             android:name="mx.com.factico.cide.PropuestasActivity"
-            android:label="@string/propuesta_name"
             android:screenOrientation="portrait"
             android:parentActivityName="mx.com.factico.cide.MainActivity" />
         
         <activity
             android:name="mx.com.factico.cide.dialogues.CitiesDialog"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation"
             android:windowSoftInputMode="stateHidden" />
         
         <activity
             android:name="mx.com.factico.cide.TestimoniosAddActivity"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation"
             android:windowSoftInputMode="stateHidden" />
         
         <activity
             android:name="mx.com.factico.cide.GcmRegisterActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name" />
+            android:screenOrientation="portrait" />
         
         <activity
             android:name="mx.com.factico.cide.PropuestasAddActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name" />
+            android:screenOrientation="portrait" />
         
         <!-- Parse Framework -->
         <service android:name="com.parse.PushService" />
