--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -80,7 +80,8 @@
             android:name="mx.com.factico.cide.TestimoniosAddActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation"
-            android:windowSoftInputMode="stateHidden" />
+            android:windowSoftInputMode="stateHidden"
+            android:parentActivityName="mx.com.factico.cide.TestimoniosActivity" />
         
         <activity
             android:name="mx.com.factico.cide.GcmRegisterActivity"
