--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -61,6 +61,11 @@
             android:parentActivityName="mx.com.factico.cide.TestimoniosMenuActivity" />
         
         <activity
+            android:name="mx.com.factico.cide.TestimoniosListActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName="mx.com.factico.cide.TestimoniosActivity" />
+        
+        <activity
             android:name="mx.com.factico.cide.MexicoMapActivity"
             android:screenOrientation="portrait"
             android:parentActivityName="mx.com.factico.cide.TestimoniosMenuActivity" />
