--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="16"
+        android:minSdkVersion="17"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -24,7 +24,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true" >
         
         <activity
             android:name="mx.com.factico.cide.SplashActivity"
@@ -87,6 +88,18 @@
             android:configChanges="orientation"
             android:windowSoftInputMode="stateHidden"
             android:parentActivityName="mx.com.factico.cide.TestimoniosActivity" />
+        
+        <activity
+            android:name="mx.com.factico.cide.FacebookLoginActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name" />
+        
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name" />
+         
+         <meta-data android:value="@string/facebook_app_id" android:name="com.facebook.sdk.ApplicationId"/>
         
         <activity
             android:name="mx.com.factico.cide.GcmRegisterActivity"
