--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -79,9 +79,14 @@
             android:parentActivityName="mx.com.factico.cide.TestimoniosMenuActivity" />
         
         <activity
-            android:name="mx.com.factico.cide.PropuestasActivity"
+            android:name="mx.com.factico.cide.PropuestasMenuActivity"
             android:screenOrientation="portrait"
             android:parentActivityName="mx.com.factico.cide.MainActivity" />
+        
+        <activity
+            android:name="mx.com.factico.cide.PropuestasComentariosActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName="mx.com.factico.cide.PropuestasMenuActivity" />
         
         <activity
             android:name="mx.com.factico.cide.dialogues.CitiesDialog"
@@ -106,7 +111,7 @@
             android:screenOrientation="portrait" />
         
         <activity
-            android:name="mx.com.factico.cide.PropuestasAddActivity"
+            android:name="mx.com.factico.cide.PropuestasActivity"
             android:screenOrientation="portrait" />
         
         <!-- Parse Framework -->
