--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,6 +84,11 @@
             android:parentActivityName="mx.com.factico.cide.TestimoniosActivity" />
         
         <activity
+            android:name="mx.com.factico.cide.PoliticasActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName="mx.com.factico.cide.SettingsActivity" />
+        
+        <activity
             android:name="mx.com.factico.cide.PropuestasMenuActivity"
             android:screenOrientation="portrait"
             android:parentActivityName="mx.com.factico.cide.MainActivity" />
